# Maggelan-Orbit

./: .gitignore  CMakeLists.txt  README.md
data/: properties.yaml
data/csv/: 2262011a.csv  3004003a.csv  orbit_data_ex.csv
data/csv/2007/: mess_rs_07155_156_10s_odf.csv  mess_rs_07155_156_60s_odf.csv  mess_rs_07156_158_10s_odf.csv  mess_rs_07156_158_60s_odf.csv  mess_rs_07347_351_odf.csv  mess_rs_07351_353_odf.csv  mess_rs_07354_355_odf.csv  mess_rs_07355_356_odf.csv  mess_rs_07356_360_odf.csv  mess_rs_07360_361_odf.csv  mess_rs_07361_361_odf.csv  mess_rs_07361_362_odf.csv  mess_rs_07362_002_odf.csv  mess_rs_07364_365_10s_odf.csv  mess_rs_07365_002_10s_odf.csv
data/csv/2008/: mess_rs_08002_003_10s_odf.csv  mess_rs_08002_003_odf.csv  mess_rs_08003_005_10s_odf.csv  mess_rs_08004_007_odf.csv  mess_rs_08005_006_10s_odf.csv  mess_rs_08007_008_10s_odf.csv  mess_rs_08007_010_odf.csv  mess_rs_08008_010_10s_odf.csv  mess_rs_08010_012_10s_odf.csv  mess_rs_08010_014_odf.csv  mess_rs_08012_013_10s_odf.csv  mess_rs_08013_014_10s_odf.csv  mess_rs_08014_015_1s_odf.csv  (+197 more)
data/odf/: 2113004a.lbl  2262011a.lbl  3004003a.lbl  3011003a.lbl  4003285a.lbl  4003285b.lbl
python/: parse.ipynb  parser.ipynb
src/: main.cpp
src/space/: SpaceBodyManager.cpp  SpaceBodyManager.h  SpaceObject.cpp  SpaceObject.h  SpaceObjectEntity.cpp  SpaceObjectEntity.h
src/types/: BodyData.h  BodyState.cpp  BodyState.h  Vec3d.cpp  Vec3d.h
src/utils/: BodyData.cpp  BodyData.h  BodyState.cpp  BodyState.h  Constants.h  PathResolver.cpp  PathResolver.h  PropertiesReader.cpp  PropertiesReader.h  SpaceObjectManager.cpp  SpaceObjectManager.h  TDBTime.cpp  TDBTime.h  TimeConverter.cpp  TimeConverter.h  Vec3d.h
utils/: vec3d.cpp  vec3d.h
(+2643 files in other folders)
